Correction après démo client
- couleur scrollbar
- couleur fond
- changement logo
- ajout espace sous footer

--- a/themes/NoblessTheme/assets/scss/index.scss
+++ b/themes/NoblessTheme/assets/scss/index.scss
@@ -17,9 +17,20 @@
 body {
     font-family: 'Roboto', sans-serif;
     overflow: hidden;
+    background-color: #c3c3c3;
 }
 
-.bg-header {
+::-webkit-scrollbar {
+    width: 11px;
+}
+::-webkit-scrollbar-track {
+    background: #c3c3c3;
+}
+::-webkit-scrollbar-thumb {
+    background: #271513;
+}
+
+.bg-header, .bg-footer {
     background-color: #c3c3c3;
 }
 
@@ -48,6 +59,19 @@ header {
         width: 100%;
     }
 
+    h1.title {
+        font-family: 'Bookman Old Style', 'Roboto', sans-serif;
+        font-size: 3em;
+        font-weight: bolder;
+        a {
+            color: #000000;
+            text-decoration: none;
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    } 
+
     .logo {
         @include media-breakpoint-up(md) {
             width: 270px;
@@ -66,6 +90,10 @@ footer {
             font-size: 1.4rem;
         }
     }
+}
+
+.footer-container {
+    height: 25px;
 }
 
 .header-banner,
@@ -90,6 +118,10 @@ div.dropdown-menu {
             padding: 0;
         }
     }
+}
+
+#mainContentContainer {
+    background-color: #cc9d84;
 }
 
 div.main-content {
